HelloUltraviolet/Fixtures/RejectedSource/FFI/HostedExportDiagnostics/Source/Main.uv
//! Rejected FFI specimen for the hosted-export diagnostics table.

#host_export("C")
public procedure hostedGeneric<TValue>() -> i32 {
    return 0
}
